RESOLVED FIXED308429
[threaded-animations] remote timeline may not get preserved in update where a new animation uses it
https://bugs.webkit.org/show_bug.cgi?id=308429
Summary [threaded-animations] remote timeline may not get preserved in update where a...
Antoine Quint
Reported 2026-02-22 06:25:37 PST
If a previously-running accelerated animation is removed during an update and a new accelerated animation is created in that same update, depending on the sequence in which their target layer are updated, the timeline they share may not get preserved yielding a failed assertion under `RemoteLayerTreeNode::setAcceleratedEffectsAndBaseValues()`.
Attachments
Antoine Quint
Comment 1 2026-02-22 06:26:04 PST
Antoine Quint
Comment 2 2026-02-22 06:57:06 PST
EWS
Comment 3 2026-02-22 09:02:44 PST
Committed 308011@main (9fe876d63d4a): <https://commits.webkit.org/308011@main> Reviewed commits have been landed. Closing PR #59207 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.